[package]
name = "python-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
pyo3 = {version = "0.17", features=["auto-initialize",]}
num-traits = "0.2"
num-derive = "0.3"
