[package]
name = "python-ast"
version = "0.1.1"
edition = "2021"
description = "A library for compiling Python to Rust"
license = "Apache-2.0"
license_file = "LICENSE"
repository = "https://github.com/rexlunae/python-ast-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
pyo3 = {version = "0.20", features=["auto-initialize",]}
num-traits = "0.2"
num-derive = "0.4"
log = "0.4"
test-log = "0.2"
env_logger = "0.10.0"
litrs = "0.4.0"
encoding = "0.2.33"
to_tokenstream = "0.1.0"
