[package]
name = "python-ast"
version = "0.3.1"
edition = "2021"
description = "A library for compiling Python to Rust"
license = "Apache-2.0"
license_file = "LICENSE"
repository = "https://github.com/rexlunae/python-ast-rs.git"
documentation = "https://docs.rs/python-ast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
pyo3 = {version = "0.21", features=["auto-initialize", "serde"]}
num-traits = "0.2"
num-derive = "0.4"
log = "0.4"
test-log = "0.2"
env_logger = "0.11.0"
litrs = "0.4.1"
encoding = "0.2.33"
to_tokenstream = "0.1.3"

proc-macro-error = "1.0.4"
serde = { version = "1.0.195", features = ["serde_derive", "derive", "rc"] }
pythonize = "0.21"
serde-pickle = "1.1.1"
thiserror = "1.0.56"
